Fix img alignment in small screens

--- a/assets/css/mine.css
+++ b/assets/css/mine.css
@@ -68,6 +68,10 @@ h1 span {
   margin-top: -7px;
 }
 
+.img-responsive {
+    margin: 0 auto;
+}
+
 /* The blog posts archive, a long list */
 /*.posts {
    list-style-type: none;
